changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

For the throwing skill, prefer items with 'is_thrown'.
This makes the player throw eg throwing daggers before other items.
Nicolas Weeger 2010-07-23

CRE: alchemy recipes report.
Nicolas Weeger 2010-07-21

CRE: display if artifacts can be generated through alchemy.
Nicolas Weeger 2010-07-21

Correctly generate readable of specified type if set.
This fixes a bug in Scorn (and elsewhere) library where
you could have alchemy recipes in the god section.
Nicolas Weeger 2010-07-19

CRE: bullet-like spells damage and cost report, praying only.
Nicolas Weeger 2010-07-18

CRE: add 'damage' to object wrapper.
Nicolas Weeger 2010-07-18

CRE: disable tree sorting for resource window, as that prevents reading
the treasure lists correctly.
Nicolas Weeger 2010-07-18

Add 'knowledge search <text>' to filter knowledge.
Nicolas Weeger 2010-07-14

Remove unused parameters.
Nicolas Weeger 2010-07-14

Don't display in summary functions, but in higher level.
Nicolas Weeger 2010-07-14

Don't display in detail functions, but in higher level.
Nicolas Weeger 2010-07-14

Enable knowledge filter, with additional parameter to 'knowledge list'.
Nicolas Weeger 2010-07-14

CRE: fix displayed alchemy formulae count.
Nicolas Weeger 2010-07-10

CRE: parse race-specific maps if they exist.
Nicolas Weeger 2010-07-05

Abort() on empty archetype name.
Nicolas Weeger 2010-07-05

Extract some code from enter_exit().
 server/server.c
Nicolas Weeger 2010-06-26

Add item type validity check when loading something.
Nicolas Weeger 2010-06-26

CRE: take 'npctoken' and 'setnpctoken' into account for message display.