@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Abort at startup if a creature one can summon has no move_type defined.
+Add a redundant check for move_type 0 when summoning, set it to walk
+in this case. This is a fix enforcer for bug #2791003.
+Nicolas Weeger 2010-07-26
+
 For the throwing skill, prefer items with 'is_thrown'.
 This makes the player throw eg throwing daggers before other items.
 Nicolas Weeger 2010-07-23
